# WeNeedMetal

./: .geany  .gitignore  .gitmodules  CMakeLists.txt  WeNeedMetal.sln  config.h.in  projects.geany  setup.sh  weneedmetal_server
.codelite/: weneedmetal.session  weneedmetal.tags  weneedmetal.workspace.someone
include/: structs.hpp
include/cl/: cl.hpp  manger.hpp  render.hpp  screen.hpp  settings.hpp
include/cl/gui/: base.hpp  controll.hpp  game.hpp
include/gui/: base.hpp  game.hpp
include/structs/: base.hpp  glh.hpp  keyboard.hpp  keymods.hpp  matrix.hpp  mouse.hpp  vector.hpp
include/wnm/: block.hpp  field.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  client.cpp  server.cpp
src/cl/: CMakeLists.txt  cl.cpp  screen.cpp  settings.cpp
src/cl/gui/: CMakeLists.txt  base.cpp  controll.cpp
src/gui/: CMakeLists.txt  base.cpp  game.cpp
src/wnm/: field.cpp
