CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(WeNeedMetal CXX)

SET(WeNeedMetal_VERSION_MAJOR 0)
SET(WeNeedMetal_VERSION_MINOR 1)

CONFIGURE_FILE(
  "${PROJECT_SOURCE_DIR}/config.h.in"
  "${PROJECT_BINARY_DIR}/config.h"
)

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(GLFW_BUILD_DOCS OFF)
SET(GLFW_BUILD_EXAMPLES OFF)
SET(GLFW_BUILD_TESTS OFF)
SET(GLFW_DOCUMENT_INTERNALS OFF)
SET(GLFW_INSTALL OFF)

ADD_SUBDIRECTORY(libs/glfw)
INCLUDE_DIRECTORIES(libs/glfw/include)

FILE(GLOB SRC_CL RELATIVE ${PROJECT_SOURCE_DIR} src/cl/*.cpp)
SOURCE_GROUP("src\\cl" FILES ${SRC_CL})
FILE(GLOB HEADER_CL RELATIVE ${PROJECT_SOURCE_DIR} include/cl/*.hpp)
SOURCE_GROUP("include\\cl" FILES ${HEADER_CL})

FILE(GLOB SRC_GUI RELATIVE ${PROJECT_SOURCE_DIR} src/gui/*.cpp)
SOURCE_GROUP("src\\gui" FILES ${SRC_GUI})
FILE(GLOB HEADER_GUI RELATIVE ${PROJECT_SOURCE_DIR} include/gui/*.hpp)
SOURCE_GROUP("include\\gui" FILES ${HEADER_GUI})

FILE(GLOB HEADER_STRUCTS RELATIVE ${PROJECT_SOURCE_DIR} include/structs/*.cpp)
SOURCE_GROUP("include\\structs" FILES ${HEADER_STRUCTS})

FILE(GLOB SRC RELATIVE ${PROJECT_SOURCE_DIR} src/*.cpp)
SOURCE_GROUP("src" FILES ${SRC})

ADD_EXECUTABLE(weneedmetal src/client.cpp ${SRC_CL} ${HEADER_CL} ${SRC_GUI} ${HEADER_GUI})
ADD_EXECUTABLE(weneedmetal_server src/server.cpp )

TARGET_LINK_LIBRARIES(weneedmetal glfw ${GLFW_LIBRARIES})
