CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(WeNeedMetal CXX)

SET(WeNeedMetal_VERSION_MAJOR 0)
SET(WeNeedMetal_VERSION_MINOR 1)

CONFIGURE_FILE(
  "${PROJECT_SOURCE_DIR}/config.h.in"
  "${PROJECT_BINARY_DIR}/config.h"
)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(Boost_USE_STATIC_LIBS ON) #必要か怪しいけど一応。多分無くてもいい
FIND_PACKAGE(Boost 1.55.0 REQUIRED) # BOOSTを探す。
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SET(GLFW_BUILD_DOCS OFF)
SET(GLFW_BUILD_EXAMPLES OFF)
SET(GLFW_BUILD_TESTS OFF)
SET(GLFW_DOCUMENT_INTERNALS OFF)
SET(GLFW_INSTALL OFF)

ADD_SUBDIRECTORY(libs/glfw)
INCLUDE_DIRECTORIES(libs/glfw/include)

FILE(GLOB SRC_CL RELATIVE ${PROJECT_SOURCE_DIR} src/cl/*.cpp)
SOURCE_GROUP("src\\cl" FILES ${SRC_CL})
FILE(GLOB HEADER_CL RELATIVE ${PROJECT_SOURCE_DIR} include/cl/*.hpp)
SOURCE_GROUP("include\\cl" FILES ${HEADER_CL})

FILE(GLOB SRC_RND RELATIVE ${PROJECT_SOURCE_DIR} src/rnd/*.cpp)
SOURCE_GROUP("src\\rnd" FILES ${SRC_RND})
FILE(GLOB HEADER_RND RELATIVE ${PROJECT_SOURCE_DIR} include/rnd/*.hpp)
SOURCE_GROUP("include\\rnd" FILES ${HEADER_RND})

FILE(GLOB SRC_GUI RELATIVE ${PROJECT_SOURCE_DIR} src/gui/*.cpp)
SOURCE_GROUP("src\\gui" FILES ${SRC_GUI})
FILE(GLOB HEADER_GUI RELATIVE ${PROJECT_SOURCE_DIR} include/gui/*.hpp)
SOURCE_GROUP("include\\gui" FILES ${HEADER_GUI})

FILE(GLOB SRC_FMT RELATIVE ${PROJECT_SOURCE_DIR} src/fmt/*.cpp)
SOURCE_GROUP("src\\fmt" FILES ${SRC_FMT})
FILE(GLOB HEADER_FMT RELATIVE ${PROJECT_SOURCE_DIR} include/fmt/*.hpp)
SOURCE_GROUP("include\\fmt" FILES ${HEADER_FMT})

FILE(GLOB SRC_WNM RELATIVE ${PROJECT_SOURCE_DIR} src/wnm/*.cpp)
SOURCE_GROUP("src\\wnm" FILES ${SRC_WNM})
FILE(GLOB HEADER_WNM RELATIVE ${PROJECT_SOURCE_DIR} include/wnm/*.hpp)
SOURCE_GROUP("include\\wnm" FILES ${HEADER_WNM})

FILE(GLOB HEADER_STRUCTS RELATIVE ${PROJECT_SOURCE_DIR} include/structs/*.hpp)
SOURCE_GROUP("include\\structs" FILES ${HEADER_STRUCTS})

SOURCE_GROUP("include" config.h)

FILE(GLOB SRC RELATIVE ${PROJECT_SOURCE_DIR} src/*.cpp)
SOURCE_GROUP("src" FILES ${SRC})

ADD_EXECUTABLE(weneedmetal src/client.cpp config.h
  ${HEADER_STRUCTS}
  ${SRC_CL} ${HEADER_CL}
  ${SRC_GUI} ${HEADER_GUI}
  ${SRC_FMT} ${HEADER_FMT}
  ${SRC_WNM} ${HEADER_WNM})
ADD_EXECUTABLE(weneedmetal_server src/server.cpp config.h)

TARGET_LINK_LIBRARIES(weneedmetal glfw ${GLFW_LIBRARIES})
